# FRAME

./: .gitignore  CHANGELOG.md  README.md  canon.md  finalized-decisions.md
.hermes/plans/: 2026-05-31_143209-frame-vision-and-doc-cleanup-plan.md  2026-05-31_165946-frame-alignment-and-doc-cleanup-report.md  2026-05-31_170513-frame-doc-cleanup-execution-plan.md
Frame lab/: README.md  core-fixture-set.md  fixture-selection-principles.md
Frame lab/fixtures/autopahe/project/: ADVANCED.md  README.md  auto_pahe.py  cli.py  config.py  install.py  kwikdown.py  pyproject.toml  requirements.txt  state.py
Frame lab/fixtures/autopahe/project/Docs/: CHANGES_v3.0.0.md  about.txt
Frame lab/fixtures/autopahe/project/ap_core/: browser.py  cache.py  config.py  resume_manager.py  updater.py
Frame lab/fixtures/autopahe/project/collection/: __init__.py  commands.py  manager.py  stats.py
Frame lab/fixtures/autopahe/project/features/: manager.py  pahesort.py
Frame lab/fixtures/autopahe/project/release-notes/: RELEASE_NOTES_v3.6.0.md  RELEASE_NOTES_v3.6.1.md
Frame lab/fixtures/autopahe/project/tests/: test_cli.py  test_config.py  test_kwikdown.py  test_setup.py  test_updater.py
docs/: frame-architecture.md  frame-blocks.md  frame-canon.md  frame-design-report.md  framelabplan.md  implementation-reset-plan.md  index.md  project-family-research.md  project-family.md  repo-structure.md  schema.md  versioning.md
frame-python/: BLUEPRINT.md  README.md  V0_1_SCOPE.md  pyproject.toml
learn/: FRAME.md  haxaml.md
red_room_test/: README.md  loop-2-report.md  loop-3-report.md  test_harness.py
research/: README.md  competitive-landscape-report.md
schemas/: acts.schema.yaml  expect.schema.yaml  facts.schema.yaml  frame.schema.yaml  map.schema.yaml  rules.schema.yaml
scripts/: README.md  frame_lab_aggregate.py
tests/: README.md
(+353 files in other folders)
